# trust-align

./: .gitignore  LICENSE.txt  README.md  TODO.md  environment.yml  pyproject.toml  requirements.txt  trust_eval.py  utils.py
TRUST_ALIGN/augment_samples/: doc_recombination.py  doc_recombination.sh
TRUST_ALIGN/negatives_selection/: error_selection.sh  inference.py  utils.py
TRUST_ALIGN/seed_samples/: claims_gen.py  collect_pipeline.py  re_cali.sh
configs/: asqa_closedbook_default.yaml  asqa_closedbook_rejection.yaml  asqa_default.yaml  asqa_rejection.yaml  eli5_closedbook_default.yaml  eli5_closedbook_rejection.yaml  eli5_default.yaml  eli5_rejection.yaml  expertqa_rejection.yaml  qampari_closedbook_default.yaml  qampari_closedbook_rejection.yaml  qampari_default.yaml  qampari_rejection.yaml
data generation/negatives_selection/: concat.csv
docs/benchmark_data/: eval_config.yaml
docs/concepts/: datasets.md  metrics.md
docs/custom/: prompts
docs/docs/: metrics.md
docs/experiments/: README.md  main.py
docs/experiments/configs/: asqa_closedbook_default_baseline.yaml  asqa_closedbook_rejection_baseline.yaml  asqa_default_baseline.yaml  asqa_openai.yaml  eli5_closedbook_rejection_baseline.yaml  eli5_default.baseline.yaml  expertqa_closedbook_default_baseline.yaml  expertqa_closedbook_rejection_baseline.yaml  expertqa_rejection_baseline.yaml  qampari_closedbook_rejection_baseline.yaml  qampari_rejection_baseline.yaml
docs/experiments/old_configs/: asqa_closedbook_rejection.yaml  eli5_closedbook_rejection.yaml  qampari_closedbook_rejection.yaml
docs/guides/: benchmark_example.py
docs/guides/prompts/: qampari_rejection.json
docs/prompts/: eli5_closedbook_rejection.json  qampari_closedbook_default.json  qampari_default.json
docs/quickstart/: README.md  eval_config.yaml  generator_config.yaml  quickstart.md  test.ipynb  user_example.py
docs/quickstart/prompts/: asqa_closedbook_rejection.json  eli5_closedbook_default.json  expertqa_rejection.json  qampari_closedbook_rejection.json
training/: README.md  dpo.py  dpo.sh  sft.sh  sft_only_out.py  utils.py
training/training_configs/: deepspeed_zero3.yaml  dpo_full_align.yaml  dpo_full_align_llama2.yaml  sft_full_only_out.yaml
trust-eval/: config.py  evaluator.py  llm.py  logging_config.py  metrics.py  response_generator.py  utils.py
trust_align/: README.md  dpo.py  dpo.sh  requirements.txt
trust_align/data generation/negatives_selection/: error_selection.py  infer.sh  inference.py
trust_align/data generation/positives_synthesis/: gen_ans.sh  gen_answers.py  gen_positives.py
trust_align/data generation/seed_samples/: cluster.sh  retrieval_cali.py  text_clustering.py
trust_align/training_configs/: dpo_full_align.yaml  dpo_full_align_llama3.yaml  sft_full_only_out.yaml
trust_eval/: README.md  __init__.py  auto_ais_loader.py  config.py  data.py  evaluator.py  example_usage.py  generator_config.yaml  llm.py  logging_config.py  metrics.py  post_hoc_cite.py  pyproject.toml  response_generator.py  retrieval.py  searcher.py  utils.py
trust_eval/docs/custom/: README.md  generator_config.yaml
trust_eval/docs/docs/: datasets.md  metrics.md
trust_eval/docs/experiments/: README.md  eval.sh  main.py  prompts
trust_eval/docs/prompts/: asqa_closedbook_default.json  asqa_refusal.json  eli5_closedbook_rejection.json  expertqa_refusal.json  (+1 more)
trust_eval/trust_eval/: __init__.py  auto_ais_loader.py  config.py  data.py  evaluator.py  llm.py  logging_config.py  metrics.py  post_hoc_cite.py  response_generator.py  retrieval.py  searcher.py  utils.py
(+40 files in other folders)
