[tool.poetry]
name = "trust_eval"
version = "0.1.0"
description = "Metric to measure RAG responses with inline citations"
authors = ["Shang Hong Sim <simshanghong@gmail.com>"]
license = "CC BY-NC 4.0"
readme = "README.md"
homepage = "https://github.com/shanghongsim/trust-eval"
repository = "https://github.com/shanghongsim/trust-eval"
keywords = ["RAG", "evaluation", "metrics", "citation"]
exclude = ["demo"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
vllm = "^0.6.6.post1"
peft = "^0.14.0"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.26.1"
scipy = "^1.14.1"
colorlog = "^6.9.0"
nltk = "^3.9.1"
py3nvml = "^0.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"